@@ -412,7 +412,7 @@ more than just the last one, you can use L</"every_param">. Note that this
 method caches all data, so it should not be called before the entire request
 body has been received. Parts of the request body need to be loaded into
 memory to parse C<POST> parameters, so you have to make sure it is not
-excessively large, there's a 10MB limit by default.
+excessively large, there's a 16MB limit by default.
 
 =head2 params
 
@@ -424,7 +424,7 @@ usually a L<Mojo::Parameters> object. Note that this method caches all data,
 so it should not be called before the entire request body has been received.
 Parts of the request body need to be loaded into memory to parse C<POST>
 parameters, so you have to make sure it is not excessively large, there's a
-10MB limit by default.
+16MB limit by default.
 
   # Get parameter names and values
   my $hash = $req->params->to_hash;
