@@ -136,7 +136,7 @@ In L<Mojolicious> this event loop is L<Mojo::IOLoop>.
 
 To protect your applications from excessively large requests and responses,
 our HTTP parser has a cap after which it will automatically stop accepting new
-data, and in most cases force the connection to be closed. The limit is 10MB
+data, and in most cases force the connection to be closed. The limit is 16MB
 by default, you can use the attribute L<Mojo::Message/"max_message_size"> or
 C<MOJO_MAX_MESSAGE_SIZE> environment variable to change this value.
 
@@ -144,7 +144,7 @@ C<MOJO_MAX_MESSAGE_SIZE> environment variable to change this value.
 
 This is a very similar protection mechanism to the one described in the
 previous answer, but a little more specific. It limits the maximum length of
-the start-line for HTTP requests and responses. The limit is 10KB by default,
+the start-line for HTTP requests and responses. The limit is 8KB by default,
 you can use the attribute L<Mojo::Message/"max_line_size"> or
 C<MOJO_MAX_LINE_SIZE> environment variable to change this value.
 
@@ -152,7 +152,7 @@ C<MOJO_MAX_LINE_SIZE> environment variable to change this value.
 
 Almost the same as the previous answer, but this protection mechanism limits
 the number and maximum length of HTTP request and response headers. The limits
-are 100 headers with 10KB each by default, you can use the attributes
+are 100 headers with 8KB each by default, you can use the attributes
 L<Mojo::Headers/"max_lines"> and L<Mojo::Headers/"max_line_size"> or the
 C<MOJO_MAX_LINES> and C<MOJO_MAX_LINE_SIZE> environment variables to change
 these values.
