@@ -777,7 +777,7 @@ temporary file.
     </body>
   </html>
 
-To protect you from excessively large files there is also a limit of 10MB by
+To protect you from excessively large files there is also a limit of 16MB by
 default, which you can tweak with the attribute
 L<Mojo::Message/"max_message_size"> or C<MOJO_MAX_MESSAGE_SIZE> environment
 variable.
